@@ -9,6 +9,7 @@ http://sourceforge.net/tracker/?group_id=260863
 OpenSearchServer 1.3
 
 New features:
+- 3519206: XSL support on XML upload
 - 3510432: Support of Arabic language
 - 3512267: OCR Integration
 - 3509336: Adding regular expression capture in parser	
